--- a/public/stylesheets/components/night-mode.scss
+++ b/public/stylesheets/components/night-mode.scss
@@ -2,21 +2,21 @@
 
 @keyframes nightMode {
   0% {
-    background-color: white;
+    opacity: 0;
   }
 
   100% {
-    background-color: black;
+    opacity: 1;
   }
 }
 
 @keyframes nightModeOff {
   0% {
-    background-color: black;
+    opacity: 1;
   }
 
   100% {
-    background-color: white;
+    opacity: 0;
   }
 }
 
@@ -35,21 +35,42 @@
 }
 
 [class*="night-mode-o"] {
-  animation-direction:forwards;
-  animation-fill-mode: forwards;
-  animation-duration: 1500ms;
+  background-color: white;
+
+  &::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index: -1;
+    pointer-events: none;
+    animation-direction: forwards;
+    animation-fill-mode: forwards;
+    animation-duration: 1500ms;
+    will-change: opacity;
+  }
+}
+
+.night-mode-off::before {
+  animation-name: nightModeOff;
+  opacity: 0;
 }
 
 .night-mode-off {
-  animation-name: nightModeOff;
-
   .night-mode {
     color: $red;
   }
 }
 
-.night-mode-on {
+.night-mode-on::before {
   animation-name: nightMode;
+  opacity: 1;
+}
+
+.night-mode-on {
 
   p-3d:not(.night-mode), span {
     color: white;
