--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,12 +51,18 @@ const { title } = Astro.props
         const cF = new CursorFriend({ selector: 'body' })
         const linkColorizer = new LinkColorizer({})
 
-        // Start everything
+        // Start lightweight animations immediately
         requestAnimationFrame(() => {
           translater.start()
           cF.start()
-          linkColorizer.start()
         })
+
+        // Delay expensive LinkColorizer until after initial paint
+        setTimeout(() => {
+          requestAnimationFrame(() => {
+            linkColorizer.start()
+          })
+        }, 500)
       })
     </script>
   </body>
