--- a/public/stylesheets/components/3d-me.scss
+++ b/public/stylesheets/components/3d-me.scss
@@ -1,27 +1,28 @@
 $me-size: 30rem;
 
-@keyframes iGrow {
+@keyframes iFadeIn {
   0% {
-    transform: translateZ(0) scaleY(0);
+    opacity: 0;
   }
   100% {
-    transform: translateZ(0) scaleY(1);
+    opacity: 1;
   }
 }
 
 .me {
+  opacity: 0;
   animation-fill-mode: forwards;
-  animation-duration: 1500ms;
-  animation-name: iGrow;
+  animation-duration: 800ms;
+  animation-name: iFadeIn;
   animation-timing-function: ease-out;
+  animation-delay: 300ms;
   background-size: $me-size $me-size;
   object-fit: cover;
   width: $me-size;
   height: $me-size;
   transition: filter 2s linear;
   transform: translateZ(0);
-  transform-origin: center top;
-  will-change: transform, filter;
+  will-change: opacity, filter;
 
   &:before {
     background-image: url("https://cdn.hifilabs.co/08845e7b-79c4-4e0f-c102-0f9ce6cd1000/thumbnail");
