--- a/public/stylesheets/components/night-mode.scss
+++ b/public/stylesheets/components/night-mode.scss
@@ -41,9 +41,14 @@
     content: '';
     position: fixed;
     top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    height: 100dvh; /* Dynamic viewport height for mobile browsers */
+    min-height: 100vh;
+    min-height: 100dvh;
     background-color: black;
     z-index: -1;
     pointer-events: none;
