--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props
 ---
 
 <!doctype html>
-<html lang="en" class="night-mode-off">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Where the web makes sense" />
